--- a/Framework/APNS.xcodeproj/xcshareddata/xcschemes/APNS.xcscheme
+++ b/Framework/APNS.xcodeproj/xcshareddata/xcschemes/APNS.xcscheme
@@ -28,7 +28,26 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "3F388E0E1C5E1DC20000EDCE"
+               BuildableName = "UnitTest.xctest"
+               BlueprintName = "UnitTest"
+               ReferencedContainer = "container:APNS.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "3FBBC7E61C5CC20F00EF69CC"
+            BuildableName = "APNS.framework"
+            BlueprintName = "APNS"
+            ReferencedContainer = "container:APNS.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
